# kidraw

./: .gitignore  README.md  README.rst  flake.nix  pyproject.toml  setup.py  test_card.py
example/: example-cache.lib  example.bak  example.dcm  example.kicad_pcb  example.kicad_pcb-bak  example.lib  example.net  example.pro  example.py  example.sch  fp-lib-table
example/example/: Capacitor_(Polarized)_0805.kicad_mod  Capacitor_(Polarized)_1206.kicad_mod  Capacitor_0603.kicad_mod  Inductor_1206.kicad_mod  STM32F042K6T6_32-QFP.kicad_mod
examples/stdlib/: stdlib-example.pro  stdlib-example.sch  stdlib.dcm  stdlib.lib  stdlib.py
examples/test_card/: footprints.py
kidraw/: __init__.py  devices.py  footprint.py  footprints.py  icbuilder.py  ipc.py  ipc_test.py  kidraw_test.py  stdlib.py  stdlib_test.py  symbols.py
kidraw/footprint/: __init__.py  footprint_test.py  library.py  test_footprint.py  test_library.py
kidraw/footprint/golden/: 0805.kicad_mod  0805P.kicad_mod  2012.kicad_mod  2012P.kicad_mod  QFN.kicad_mod  QFP.kicad_mod  SC70-5.kicad_mod  SC70-6.kicad_mod  SC70-8.kicad_mod  SOIC.kicad_mod  SOT23-3.kicad_mod  SOT23-5.kicad_mod  SOT23-6.kicad_mod  SOT23-8.kicad_mod  TSSOP.kicad_mod
kidraw/ipc/: __init__.py  ipc_test.py  library.py  reference.py  test_ipc.py  test_library.py
kidraw/schematic/: __init__.py  library.py
